hiqa-backend/logs/info.log
[2023-08-03T08:28:14.087Z] [error]: uncaughtException: listen EADDRINUSE: address already in use :::5000
Error: listen EADDRINUSE: address already in use :::5000
    at Server.setupListenHandle [as _listen2] (node:net:1432:16)
    at listenInCluster (node:net:1480:12)
    at Server.listen (node:net:1568:7)
    at Object.<anonymous> (D:\hiqa\hiqa-backend\src\server.js:51:8)
    at Module._compile (node:internal/modules/cjs/loader:1126:14)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1180:10)
    at Module.load (node:internal/modules/cjs/loader:1004:32)
    at Function.Module._load (node:internal/modules/cjs/loader:839:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:81:12)
    at node:internal/main/run_main_module:17:47
[2023-08-05T07:18:37.193Z] [error]: 500 - [ 'TableSchemaError' ] - Error: WHERE parameter "email" has invalid "undefined" value
[2023-08-05T07:18:37.198Z] [error]: 500 - [ 'Error' ] - Error: Get Error!!! Error: WHERE parameter "email" has invalid "undefined" value
[2023-08-05T07:20:22.454Z] [error]: 500 - [ 'TableSchemaError' ] - Error: WHERE parameter "email" has invalid "undefined" value
[2023-08-05T07:20:22.465Z] [error]: 500 - [ 'Error' ] - Error: Get Error!!! Error: WHERE parameter "email" has invalid "undefined" value
[2023-08-05T07:23:05.337Z] [error]: 500 - [ 'TableSchemaError' ] - Error: WHERE parameter "email" has invalid "undefined" value
[2023-08-05T07:23:05.342Z] [error]: 500 - [ 'Error' ] - Error: Get Error!!! Error: WHERE parameter "email" has invalid "undefined" value
[2023-08-05T07:25:37.006Z] [error]: 500 - [ 'TableSchemaError' ] - Error: WHERE parameter "email" has invalid "undefined" value
[2023-08-05T07:25:37.024Z] [error]: 500 - [ 'Error' ] - Error: Get Error!!! Error: WHERE parameter "email" has invalid "undefined" value
[2023-08-05T08:23:22.516Z] [error]: 500 - [ 'TableSchemaError' ] - Error: WHERE parameter "email" has invalid "undefined" value
[2023-08-05T08:23:22.526Z] [error]: 500 - [ 'Error' ] - Error: Get Error!!! Error: WHERE parameter "email" has invalid "undefined" value
[2023-08-05T09:34:46.767Z] [error]: uncaughtException: Route.post() requires a callback function but got a [object Undefined]
Error: Route.post() requires a callback function but got a [object Undefined]
    at Route.<computed> [as post] (D:\hiqa\hiqa-backend\node_modules\express\lib\router\route.js:211:15)
    at Function.proto.<computed> [as post] (D:\hiqa\hiqa-backend\node_modules\express\lib\router\index.js:521:19)
    at Object.<anonymous> (D:\hiqa\hiqa-backend\src\front-routes\home\home.routes.js:7:8)
    at Module._compile (node:internal/modules/cjs/loader:1126:14)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1180:10)
    at Module.load (node:internal/modules/cjs/loader:1004:32)
    at Function.Module._load (node:internal/modules/cjs/loader:839:12)
    at Module.require (node:internal/modules/cjs/loader:1028:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (D:\hiqa\hiqa-backend\src\front-routes\home\index.js:1:18)
    at Module._compile (node:internal/modules/cjs/loader:1126:14)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1180:10)
    at Module.load (node:internal/modules/cjs/loader:1004:32)
    at Function.Module._load (node:internal/modules/cjs/loader:839:12)
    at Module.require (node:internal/modules/cjs/loader:1028:19)
    at require (node:internal/modules/cjs/helpers:102:18)
[2023-08-05T09:35:56.141Z] [error]: 500 - [ 'Error' ] - ReferenceError: getListData is not defined
[2023-08-05T09:41:03.738Z] [error]: uncaughtException: Route.post() requires a callback function but got a [object Undefined]
Error: Route.post() requires a callback function but got a [object Undefined]
    at Route.<computed> [as post] (D:\hiqa\hiqa-backend\node_modules\express\lib\router\route.js:211:15)
    at Function.proto.<computed> [as post] (D:\hiqa\hiqa-backend\node_modules\express\lib\router\index.js:521:19)
    at Object.<anonymous> (D:\hiqa\hiqa-backend\src\front-routes\home\home.routes.js:13:8)
    at Module._compile (node:internal/modules/cjs/loader:1126:14)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1180:10)
    at Module.load (node:internal/modules/cjs/loader:1004:32)
    at Function.Module._load (node:internal/modules/cjs/loader:839:12)
    at Module.require (node:internal/modules/cjs/loader:1028:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (D:\hiqa\hiqa-backend\src\front-routes\home\index.js:1:18)
    at Module._compile (node:internal/modules/cjs/loader:1126:14)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1180:10)
    at Module.load (node:internal/modules/cjs/loader:1004:32)
    at Function.Module._load (node:internal/modules/cjs/loader:839:12)
    at Module.require (node:internal/modules/cjs/loader:1028:19)
    at require (node:internal/modules/cjs/helpers:102:18)
[2023-08-05T09:43:12.918Z] [error]: uncaughtException: Unexpected token ','
D:\hiqa\hiqa-backend\src\front-routes\home\home.routes.js:13
router.post("/doc-uploads",upload.fields([{ name: "image", maxCount: 1 }]),, HomeController.docUpload);
                                                                           ^

SyntaxError: Unexpected token ','
    at Object.compileFunction (node:vm:360:18)
    at wrapSafe (node:internal/modules/cjs/loader:1055:15)
    at Module._compile (node:internal/modules/cjs/loader:1090:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1180:10)
    at Module.load (node:internal/modules/cjs/loader:1004:32)
    at Function.Module._load (node:internal/modules/cjs/loader:839:12)
    at Module.require (node:internal/modules/cjs/loader:1028:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (D:\hiqa\hiqa-backend\src\front-routes\home\index.js:1:18)
    at Module._compile (node:internal/modules/cjs/loader:1126:14)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1180:10)
    at Module.load (node:internal/modules/cjs/loader:1004:32)
    at Function.Module._load (node:internal/modules/cjs/loader:839:12)
    at Module.require (node:internal/modules/cjs/loader:1028:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at D:\hiqa\hiqa-backend\src\front-routes\index.js:8:29
[2023-08-05T10:11:36.295Z] [error]: 500 - [ 'TableSchemaError' ] - Error: WHERE parameter "email" has invalid "undefined" value
[2023-08-05T10:11:36.303Z] [error]: 500 - [ 'Error' ] - Error: Get Error!!! Error: WHERE parameter "email" has invalid "undefined" value
[2023-08-05T10:13:56.744Z] [error]: 500 - [ 'TableSchemaError' ] - Error: WHERE parameter "email" has invalid "undefined" value
[2023-08-05T10:13:56.756Z] [error]: 500 - [ 'Error' ] - Error: Get Error!!! Error: WHERE parameter "email" has invalid "undefined" value
[2023-08-05T10:18:59.269Z] [error]: uncaughtException: Route.post() requires a callback function but got a [object Undefined]
Error: Route.post() requires a callback function but got a [object Undefined]
    at Route.<computed> [as post] (D:\hiqa\hiqa-backend\node_modules\express\lib\router\route.js:211:15)
    at Function.proto.<computed> [as post] (D:\hiqa\hiqa-backend\node_modules\express\lib\router\index.js:521:19)
    at Object.<anonymous> (D:\hiqa\hiqa-backend\src\front-routes\auth\auth.routes.js:10:8)
    at Module._compile (node:internal/modules/cjs/loader:1126:14)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1180:10)
    at Module.load (node:internal/modules/cjs/loader:1004:32)
    at Function.Module._load (node:internal/modules/cjs/loader:839:12)
    at Module.require (node:internal/modules/cjs/loader:1028:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (D:\hiqa\hiqa-backend\src\front-routes\auth\index.js:1:18)
    at Module._compile (node:internal/modules/cjs/loader:1126:14)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1180:10)
    at Module.load (node:internal/modules/cjs/loader:1004:32)
    at Function.Module._load (node:internal/modules/cjs/loader:839:12)
    at Module.require (node:internal/modules/cjs/loader:1028:19)
    at require (node:internal/modules/cjs/helpers:102:18)
[2023-08-05T10:54:06.104Z] [error]: 500 - [ 'Error' ] - ReferenceError: hashPassword is not defined
[2023-08-05T10:54:49.788Z] [error]: 500 - [ 'Error' ] - Error: data must be a string or Buffer and salt must either be a salt string or a number of rounds
[2023-08-05T10:56:44.176Z] [error]: 500 - [ 'Error' ] - null
